--- a/assets/pug/pages/template/login.pug
+++ b/assets/pug/pages/template/login.pug
@@ -10,7 +10,7 @@
 
 //- passwordHideShow
 -var passwordHideShow=true; 
-  
+
 doctype html
 html(lang='en') 
     include ../../layout/header-files
@@ -30,18 +30,18 @@ html(lang='en')
                                 div.relative
                                     input(type='password' id="password" name='password' required='' placeholder="Enter your Password")
                                     div.password-icon
-                                        i(data-feather="eye" class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
-                                        i(data-feather="eye-off" class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
+                                        i(data-feather="eye" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
+                                        i(data-feather="eye-off" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
                                 div.flex.justify-between.items-center.gap-1
                                     div.flex.items-center.gap-2
-                                        label.checkbox(class="w-[1rem] h-[1rem]")   
+                                        label.checkbox(class="w-[1rem] h-[1rem] cursor-pointer")   
                                             input(type='checkbox' class="peer") 
                                             div.checkbox-indicator(class="peer-checked:!bg-primary !border-primary")  
                                                 i(data-feather="check")
                                         span Remember Me
                                     div(class="!mb-0")
                                         a(href="forgot-password.html") Forgot Password? 
-                                button.btn.btn-primary.text-white(class="hover:drop-shadow-lg") Sign in
+                                a(href="index.html").btn.btn-primary(class="!text-white hover:drop-shadow-lg") Sign in
                                 div
                                     h4 Or Sign in with 
                                 div.social(class="sm:flex-col")
