--- a/assets/pug/pages/template/register.pug
+++ b/assets/pug/pages/template/register.pug
@@ -32,10 +32,10 @@ html(lang='en')
                                 div.relative
                                     input(type='password' id="password" name='password' required='' placeholder="Enter your Password")
                                     div.password-icon
-                                        i(data-feather="eye" class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
-                                        i(data-feather="eye-off" class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
+                                        i(data-feather="eye" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
+                                        i(data-feather="eye-off" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
                                 div.flex.items-center.gap-2
-                                    label.checkbox(class="w-[1rem] h-[1rem]")   
+                                    label.checkbox(class="w-[1rem] h-[1rem] cursor-pointer")   
                                         input(type='checkbox' class="peer") 
                                         div.checkbox-indicator(class="peer-checked:!bg-primary !border-primary")  
                                             i(data-feather="check")
