--- a/assets/pug/pages/template/reset-password.pug
+++ b/assets/pug/pages/template/reset-password.pug
@@ -9,61 +9,58 @@
 -var fontAwesome=true;
 
 //- passwordHideShow
--var passwordHideShow=true;
-
-//- passwordHide 
--var passwordHide=true;
+-var passwordHideShow=true; 
 
 doctype html 
 html(lang='en')
-    include ../../layout/header-files
-    body(dir="ltr" class="unique-skin")
-        main.page-wrapper 
-            // Page Body Start 
-            div.page-body(class="h-[100vh] !mt-0 bg-cover bg-no-repeat  bg-[url('../../assets/images/dotsbg.jpg')] ")
-                div(class="!flex items-center justify-center h-full p-[.9375rem]  common-animate-main").ratio_asos
-                    //- img( src="../../assets/images/dotsbg.jpg")
-                    div(class=" grid grid-cols-12  gap-0 mx-auto w-full max-w-[70%] xl:max-w-[50%] md:max-w-[70%] sm:max-w-[80%] 2sm:max-w-[100%] xl:flex xl:justify-center items-center")
-                        div(class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] sm:min-w-[22.75rem] 2sm:min-w-[18.75rem] max-h-max")
-                            form.theme-form.flex.flex-col.gap-3(class="!m-0 p-8 2sm:p-4" action="login.html")
-                                h3 Reset Password 
-                                p See your growth and get consulting support!
-                                div.relative  
-                                    input(type='password' id="password" name='Newpassword' required='' placeholder="New password")
-                                    div.password-icon
-                                        i(data-feather="eye" class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
-                                        i(data-feather="eye-off" class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword
-                                div.relative
-                                    input(type='password' id="text" name='Confirmpassword' required='' placeholder="Confirm password")
-                                    div.password-icon 
-                                        i(data-feather="eye" class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
-                                        i(data-feather="eye-off" class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword
-                                button.btn.btn-primary.text-white(class="hover:drop-shadow-lg") Reset
-                                div
-                                    h4 Or Sign in with 
-                                div.social(class="sm:flex-col")
-                                    a(href="https://www.linkedin.com/login" class="flex items-center justify-center gap-1 btn !text-linkedin")
-                                        i.fa-brands.fa-linkedin-in
-                                        |   Linkedin
-                                    a(href="https://twitter.com/i/flow/login" class="flex items-center justify-center gap-1 btn !text-twitter")
-                                        i.fa-brands.fa-twitter
-                                        |   Twitter
-                                    a(href="https://www.instagram.com/accounts/login/" class="flex items-center justify-center gap-1 btn instagram !text-instagram")
-                                        svg(width='0' height='0')
-                                            radialgradient#rg(r='150%' cx='30%' cy='107%')
-                                                stop(stop-color='#fdf497' offset='0')
-                                                stop(stop-color='#fdf497' offset='0.05')
-                                                stop(stop-color='#fd5949' offset='0.45')
-                                                stop(stop-color='#d6249f' offset='0.6')
-                                                stop(stop-color='#285AEB' offset='0.9')
-                                        i.fa-brands.fa-instagram
-                                        span   Instagram
-                        div(class="col-span-7 rounded-lg 4xl:col-span-6 z-1 xl:col-span-12 xl:hidden")
-                            div(class="relative flex items-center justify-center object-contain") 
-                                img(src="../../assets/images/svg/reset.svg" alt="register vector" class="w-[85%]")
-                                img(src="../../assets/images/svg/resetpassword2.svg" alt="register vector" class="common-animate animate-ping bottom-[35%] absolute left-[25%] w-[25%] animate__animated animate__infinite animate__shakeY animate__slower")
-            // Page Body End
+  include ../../layout/header-files
+  body(dir="ltr" class="unique-skin")
+    main.page-wrapper 
+      // Page Body Start 
+      div.page-body(class="h-[100vh] !mt-0 bg-cover bg-no-repeat  bg-[url('../../assets/images/dotsbg.jpg')] ")
+        div(class="!flex items-center justify-center h-full p-[.9375rem]  common-animate-main").ratio_asos
+          //- img( src="../../assets/images/dotsbg.jpg")
+          div(class=" grid grid-cols-12  gap-0 mx-auto w-full max-w-[70%] xl:max-w-[50%] md:max-w-[70%] sm:max-w-[80%] 2sm:max-w-[100%] xl:flex xl:justify-center items-center")
+            div(class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] sm:min-w-[22.75rem] 2sm:min-w-[18.75rem] max-h-max")
+              form.theme-form.flex.flex-col.gap-3(class="!m-0 p-8 2sm:p-4")
+                h3 Reset Password 
+                p See your growth and get consulting support!
+                div.relative  
+                  input(type='password' id="password" name='Newpassword' required='' placeholder="New password")
+                  div.password-icon
+                    i(data-feather="eye" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ") 
+                    i(data-feather="eye-off" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ")
+                div.relative
+                  input(type='password' id="password2" name='Confirmpassword' required='' placeholder="Confirm password")
+                  div.password-icon 
+                    i(data-feather="eye" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 feather-eye2" for="password2") 
+                    i(data-feather="eye-off" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 feather-eye-off2" for="password2")
+                a(href="login.html").btn.btn-primary(class="!text-white hover:drop-shadow-lg submit-btn") Reset
+                div
+                  h4 Or Sign in with 
+                div.social(class="sm:flex-col")
+                  a(href="https://www.linkedin.com/login" class="flex items-center justify-center gap-1 btn !text-linkedin")
+                    i.fa-brands.fa-linkedin-in
+                    |   Linkedin
+                  a(href="https://twitter.com/i/flow/login" class="flex items-center justify-center gap-1 btn !text-twitter")
+                    i.fa-brands.fa-twitter
+                    |   Twitter
+                  a(href="https://www.instagram.com/accounts/login/" class="flex items-center justify-center gap-1 btn instagram !text-instagram")
+                    svg(width='0' height='0')
+                      radialgradient#rg(r='150%' cx='30%' cy='107%')
+                        stop(stop-color='#fdf497' offset='0')
+                        stop(stop-color='#fdf497' offset='0.05')
+                        stop(stop-color='#fd5949' offset='0.45')
+                        stop(stop-color='#d6249f' offset='0.6')
+                        stop(stop-color='#285AEB' offset='0.9')
+                    i.fa-brands.fa-instagram
+                    span   Instagram
+            div(class="col-span-7 rounded-lg 4xl:col-span-6 z-1 xl:col-span-12 xl:hidden")
+              div(class="relative flex items-center justify-center object-contain") 
+                img(src="../../assets/images/svg/reset.svg" alt="register vector" class="w-[85%]")
+                img(src="../../assets/images/svg/resetpassword2.svg" alt="register vector" class="common-animate animate-ping bottom-[35%] absolute left-[25%] w-[25%] animate__animated animate__infinite animate__shakeY animate__slower")
+      // Page Body End
 
-        include ../../components/customizer
+    include ../../components/customizer
 
-    include ../../layout/footer-files
+  include ../../layout/footer-files
