--- a/html/template/login.html
+++ b/html/template/login.html
@@ -40,18 +40,17 @@
                 </div>
                 <div class="relative">
                   <input type="password" id="password" name="password" required="" placeholder="Enter your Password">
-                  <div class="password-icon"><i class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye"> </i><i class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye-off"> </i></div>
+                  <div class="password-icon"><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye"> </i><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye-off"> </i></div>
                 </div>
                 <div class="flex justify-between items-center gap-1">
                   <div class="flex items-center gap-2">
-                    <label class="checkbox w-[1rem] h-[1rem]">  
+                    <label class="checkbox w-[1rem] h-[1rem] cursor-pointer">  
                       <input class="peer" type="checkbox">
                       <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
                     </label><span>Remember Me</span>
                   </div>
                   <div class="!mb-0"><a href="forgot-password.html">Forgot Password? </a></div>
-                </div>
-                <button class="btn btn-primary text-white hover:drop-shadow-lg">Sign in</button>
+                </div><a class="btn btn-primary !text-white hover:drop-shadow-lg" href="index.html">Sign in</a>
                 <div>
                   <h4>Or Sign in with </h4>
                 </div>
