--- a/html/template/reset-password.html
+++ b/html/template/reset-password.html
@@ -32,18 +32,17 @@
         <div class="!flex items-center justify-center h-full p-[.9375rem]  common-animate-main ratio_asos">
           <div class=" grid grid-cols-12  gap-0 mx-auto w-full max-w-[70%] xl:max-w-[50%] md:max-w-[70%] sm:max-w-[80%] 2sm:max-w-[100%] xl:flex xl:justify-center items-center">
             <div class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] sm:min-w-[22.75rem] 2sm:min-w-[18.75rem] max-h-max">
-              <form class="theme-form flex flex-col gap-3 !m-0 p-8 2sm:p-4" action="login.html">
+              <form class="theme-form flex flex-col gap-3 !m-0 p-8 2sm:p-4">
                 <h3>Reset Password </h3>
                 <p>See your growth and get consulting support!</p>
                 <div class="relative"> 
                   <input type="password" id="password" name="Newpassword" required="" placeholder="New password"/>
-                  <div class="password-icon"><i class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye"> </i><i class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye-off"></i></div>
+                  <div class="password-icon"><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 " data-feather="eye"> </i><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 " data-feather="eye-off"></i></div>
                 </div>
                 <div class="relative">
-                  <input type="password" id="text" name="Confirmpassword" required="" placeholder="Confirm password"/>
-                  <div class="password-icon"> <i class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye"> </i><i class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye-off"></i></div>
-                </div>
-                <button class="btn btn-primary text-white hover:drop-shadow-lg">Reset</button>
+                  <input type="password" id="password2" name="Confirmpassword" required="" placeholder="Confirm password"/>
+                  <div class="password-icon"> <i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 feather-eye2" data-feather="eye" for="password2"> </i><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 feather-eye-off2" data-feather="eye-off" for="password2"></i></div>
+                </div><a class="btn btn-primary !text-white hover:drop-shadow-lg submit-btn" href="login.html">Reset</a>
                 <div>
                   <h4>Or Sign in with </h4>
                 </div>
@@ -134,8 +133,6 @@
   <script src="../../assets/js/fontawesome/all.min.js"></script>
   <!-- password hide-show js-->
   <script src="../../assets/js/password-hide-show.js"></script>
-  <!-- password hide js -->
-  <script src="../../assets/js/password-hide.js"></script>
   <!-- Custom script   -->
   <script src="../../assets/js/script.js"> </script>
 </html>
