--- a/assets/postcss/pages/_ecommerce.css
+++ b/assets/postcss/pages/_ecommerce.css
@@ -181,6 +181,13 @@
         }
       }
     }
+    .product-substitution-rtl{
+      .product-substitution{
+        [dir="rtl"] &{
+          @apply pl-3 pr-unset ;
+        }
+      }
+    }
   }
 
   .invoice-preview {
