--- a/assets/pug/pages/template/cart.pug
+++ b/assets/pug/pages/template/cart.pug
@@ -68,7 +68,7 @@ html(lang='en')
                     a(href="checkout.html")
                       button.btn.btn-secondary.w-full.text-white Process To Checkout
                     a(href="shop.html")
-                      button.btn.btn-primary.text-white.w-full.flex.justify-center.items-center.gap-2  
+                      button.btn.btn-primary.text-white.w-full.flex.justify-center.items-center.gap-2.py-2 
                         i(data-feather="arrow-left" class="w-5 h-5 stroke-white")
                         | Back to Shopping
         // Page Body End  
