--- a/html/template/invoice-create.html
+++ b/html/template/invoice-create.html
@@ -1158,8 +1158,8 @@
                           <td class="text-xs text-content3 text-end">$12.59  </td>
                         </tr>
                         <tr> 
-                          <td class="text-xs font-bold dark:text-white" colspan="2">Total (USD) :</td>
-                          <td class="text-xs font-bold dark:text-white text-end">$839.58</td>
+                          <td class="text-xs !font-extrabold dark:text-white" colspan="2">Total (USD) :</td>
+                          <td class="text-xs !font-extrabold dark:text-white text-end">$839.58</td>
                         </tr>
                       </tbody>
                     </table>
