--- a/html/template/invoice-preview.html
+++ b/html/template/invoice-preview.html
@@ -1033,7 +1033,7 @@
                       </td>
                       <td class="min-w-[220px]">
                         <p class="text-title text-xs font-semibold">Registration No: <span class="font-medium text-content3">8459725</span></p>
-                        <p class="text-title text-xs font-semibold">Email Id:<span class="font-medium text-content3">govo@theme.com</span></p>
+                        <p class="text-title text-xs font-semibold">Email Id: <span class="font-medium text-content3">govo@theme.com</span></p>
                         <p class="text-title text-xs font-semibold">Contact No: <span class="font-medium text-content3">(773) 847-8982 </span></p>
                       </td>
                     </tr>
@@ -1141,8 +1141,8 @@
                                 <td class="text-xs text-content3 text-end">$12.59  </td>
                               </tr>
                               <tr> 
-                                <td class="text-xs font-bold dark:text-white" colspan="2">Total (USD) :</td>
-                                <td class="text-xs font-bold dark:text-white text-end">$839.58</td>
+                                <td class="text-xs !font-extrabold dark:text-white" colspan="2">Total (USD) :</td>
+                                <td class="text-xs !font-extrabold dark:text-white text-end">$839.58</td>
                               </tr>
                             </tbody>
                           </table>
