--- a/assets/pug/components/table/checkout-table.pug
+++ b/assets/pug/components/table/checkout-table.pug
@@ -30,8 +30,8 @@ table.table.equal-space
       td(class="text-xs dark:text-white" colspan="2") Tax :
       td(class="text-xs text-content3 text-end") $12.59  
     tr  
-      td(class="text-xs font-bold dark:text-white" colspan="2") Total (USD) :
-      td(class="text-xs font-bold dark:text-white text-end") $839.58
+      td(class="text-xs !font-extrabold dark:text-white" colspan="2") Total (USD) :
+      td(class="text-xs !font-extrabold dark:text-white text-end") $839.58
 
 
 
