--- a/assets/pug/pages/template/product.pug
+++ b/assets/pug/pages/template/product.pug
@@ -72,15 +72,15 @@ html(lang='en')
                       img(src="../../assets/images/ecommerce/25.jpg" alt="product")
                     div.swiper-slide
                       img(src="../../assets/images/ecommerce/26.jpg" alt="product")
-            div.col-span-8(class="xl:col-span-7 md:col-span-12")
-              div 
+            div.col-span-8(class="xl:col-span-7 md:col-span-12 product-substitution-rtl")
+              div
                 div.flex.items-center.gap-2.justify-between
                   h3.leading-none(class="mb-3 font-semibold 3xl:flex 3xl:justify-between 3xl:items-center text-title sm:text-base") Women's Latest Bags Collections
                   a(href="add-product.html" class="p-2 btn hover:dark:bg-sidebar-dark2 hover:bg-gray-light")
                     i(data-feather="plus" class="w-4 h-4 scale-100 stroke-title")
-                div.flex.items-center.gap-3.mb-3.flex-wrap
-                  span.text-content3.text-xs.leading-none(class="pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3") #15704 
-                  p.text-title.text-xs.leading-none.font-semibold(class="pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3") 
+                div.flex.items-center.gap-3.mb-3.flex-wrap 
+                  span.text-content3.text-xs.leading-none(class="pr-3 border-r border-border-light rtl:border-r-0 product-substitution rtl:border-l") #15704 
+                  p.text-title.text-xs.leading-none.font-semibold(class="pr-3 border-r border-border-light product-substitution rtl:border-r-0 rtl:border-l ") 
                     span.text-content3.text-xs.leading-none Seller: 
                     | Backy Fashion
                   p.text-title.text-xs.leading-none.font-semibold
