--- a/html/template/cart.html
+++ b/html/template/cart.html
@@ -1402,7 +1402,7 @@
                 <div class="card-footer"> 
                   <div class="flex flex-col gap-3"> <a href="checkout.html">
                       <button class="btn btn-secondary w-full text-white">Process To Checkout</button></a><a href="shop.html">
-                      <button class="btn btn-primary text-white w-full flex justify-center items-center gap-2"> <i class="w-5 h-5 stroke-white" data-feather="arrow-left"></i>Back to Shopping</button></a></div>
+                      <button class="btn btn-primary text-white w-full flex justify-center items-center gap-2 py-2"> <i class="w-5 h-5 stroke-white" data-feather="arrow-left"></i>Back to Shopping</button></a></div>
                 </div>
               </div>
             </div>
