--- a/html/template/product.html
+++ b/html/template/product.html
@@ -1045,13 +1045,13 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-8 xl:col-span-7 md:col-span-12">
-              <div> 
+            <div class="col-span-8 xl:col-span-7 md:col-span-12 product-substitution-rtl">
+              <div>
                 <div class="flex items-center gap-2 justify-between">
                   <h3 class="leading-none mb-3 font-semibold 3xl:flex 3xl:justify-between 3xl:items-center text-title sm:text-base">Women's Latest Bags Collections</h3><a class="p-2 btn hover:dark:bg-sidebar-dark2 hover:bg-gray-light" href="add-product.html"><i class="w-4 h-4 scale-100 stroke-title" data-feather="plus"></i></a>
                 </div>
-                <div class="flex items-center gap-3 mb-3 flex-wrap"><span class="text-content3 text-xs leading-none pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3">#15704 </span>
-                  <p class="text-title text-xs leading-none font-semibold pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3"> <span class="text-content3 text-xs leading-none">Seller: </span>Backy Fashion</p>
+                <div class="flex items-center gap-3 mb-3 flex-wrap"> <span class="text-content3 text-xs leading-none pr-3 border-r border-border-light rtl:border-r-0 product-substitution rtl:border-l">#15704 </span>
+                  <p class="text-title text-xs leading-none font-semibold pr-3 border-r border-border-light product-substitution rtl:border-r-0 rtl:border-l "> <span class="text-content3 text-xs leading-none">Seller: </span>Backy Fashion</p>
                   <p class="text-title text-xs leading-none font-semibold"><span class="text-content3 text-xs leading-none">Available: </span>In Stock</p>
                 </div>
                 <div class="flex items-center gap-2 mb-4">
