--- a/assets/pug/layout/header-files.pug
+++ b/assets/pug/layout/header-files.pug
@@ -77,6 +77,10 @@ head
   if(calendar_page)
     // Calender icon css 
     link(rel='stylesheet' href='../../assets/css/vendors/calendar.css')
+   
+  if(custom_switch)
+    // custom-switch
+    link(rel='stylesheet' href='../../assets/css/vendors/custom-switch.css')
     
   // App css
   link(rel='stylesheet' href='../../assets/css/style.css')
