--- a/assets/pug/pages/template/shop.pug
+++ b/assets/pug/pages/template/shop.pug
@@ -53,7 +53,7 @@ html(lang='en')
                 div.absolute(class="text-center top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-[40%] lg:max-w-[75%] xl:max-w-[50%]")
                   div.search-box.relative
                     input(class="focus:ring-2 focus:ring-warning dark:text-white dark:border-border-dark dark:bg-sidebar-dark2 border-border-light border ring-offset-2 rounded-5 w-full py-[11px] pl-[25px] pr-[55px] md:py-[5px] text-xs font-semibold text-title" placeholder="Search Brands..." type="search")       
-                    +SVG_ICON("Search","dark:stroke-white xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute")
+                    +SVG_ICON("Search","hover:cursor-pointer dark:stroke-white xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute")
                     i(data-feather="x" class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute")
             div.col-span-12.flex.items-center.justify-between.gap-3.bg-white.p-3.rounded-5(class="2sm:flex-col 2sm:items-end dark:bg-sidebar-dark") 
               div.flex.items-center.gap-3 
