--- a/assets/pug/pages/template/ecommerce.pug
+++ b/assets/pug/pages/template/ecommerce.pug
@@ -85,7 +85,7 @@ html(lang='en')
                                         div.flex.items-center.gap-4
                                             div(class="sm:hidden").search-box.relative 
                                                 input(class="border border-border-light dark:bg-sidebar-dark2 dark:border-border-dark rounded-5 w-full py-[8px] pr-[25px] pl-[48px] rtl:pl-[25px] rtl:pr-[48px] text-xs font-semibold text-title dark:text-white" placeholder="Search..." type="search")       
-                                                +SVG_ICON("Search","w-[calc(14px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(14px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white top-1/2 -translate-y-1/2 left-[17px] rtl:left-unset rtl:right-[17px] absolute")
+                                                +SVG_ICON("Search","hover:cursor-pointer w-[calc(14px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(14px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white top-1/2 -translate-y-1/2 left-[17px] rtl:left-unset rtl:right-[17px] absolute")
                                                 i(data-feather="x" class="search-close hidden rtl:hidden cursor-pointer xl:block w-[calc(14px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(14px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute")
                                             div.dropdown.on-hover-show
                                                 button(class="flex rounded-full items-center justify-center p-[5px] bg-gray-light dark:bg-sidebar-dark2") 
