--- a/html/template/chat-app.html
+++ b/html/template/chat-app.html
@@ -48,8 +48,8 @@
                 <div class="search-box-wrapper transition-all duration-300 max-w-[40%] 2xl:scale-0 2xl:opacity-0 2xl:invisible 2xl:px-body-space 2xl:max-w-full w-full 2xl:z-[5] flex-1 2xl:absolute 2xl:left-0">
                   <!-- Search Start  -->
                   <div class="search-box relative">
-                    <input class="bg-gray-light dark:bg-sidebar-dark2 rounded-5 w-full py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title" placeholder="Type to Search..." type="search"/>
-                    <svg class="xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white"> 
+                    <input class="bg-gray-light dark:bg-sidebar-dark2 rounded-5 w-full  py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title" placeholder="Type to Search..." type="search"/>
+                    <svg class="xl:hidden hover:cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white"> 
                       <use href="../../assets/svg/sprite.svg#Search"> </use>
                     </svg><i class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute" data-feather="x"></i>
                   </div>
@@ -80,7 +80,7 @@
                           </div>
                           <div class="search-box relative mt-4"> 
                             <input class="bg-gray-light border dark:bg-sidebar-dark2  dark:border-border-dark border-border-light  w-full py-[8px] pl-[15px] pr-[30px] rounded-5 text-xs font-medium text-title" placeholder="Type to Search..." type="search"/>
-                            <svg class="w-4 h-4 stroke-title top-1/2 -translate-y-1/2 right-[15px] absolute"> 
+                            <svg class="w-4 h-4 stroke-title top-1/2 -translate-y-1/2 right-[15px] absolute hover:cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Search"> </use>
                             </svg>
                           </div>
@@ -774,7 +774,7 @@
             <div class="search-wrapper">
               <div class="search-box"> 
                 <input class="search" placeholder="Search" type="search"/>
-                <svg class="w-5 h-5"> 
+                <svg class="w-5 h-5 hover:cursor-pointer"> 
                   <use href="../../assets/svg/sprite.svg#Search"> </use>
                 </svg>
               </div>
@@ -1155,7 +1155,7 @@
                                 <h4 class="text-xs font-medium truncate text-title leading-none lg:text-2xs lg:leading-none">Janis Evans</h4><span class="text-content truncate block mt-1">Hi i am janis. how are you?</span>
                               </div>
                             </div>
-                            <div class="flex flex-col items-end gap-1">     <span class="text-content text-3xs">Thus</span>
+                            <div class="flex flex-col items-end gap-1">     <span class="text-content text-3xs">Wed</span>
                             </div>
                           </li>
                           <li class="flex items-start justify-between pt-[13px] border-t border-gray-light dark:border-t dark:border-border-dark first:pt-0 first:mt-0 first:border-none">
@@ -1955,14 +1955,14 @@
               <ul class="flex gap-3 flex-wrap items-center justify-center">
                 <li class="cursor-pointer call-start-show">
                   <label for="accept-call-modal">
-                    <svg class="w-[4rem] h-[4rem] 2lg:w-[3.5rem] 2lg:h-[3.5rem] sm:w-[3rem] sm:h-[3rem] p-[12px] stroke-white bg-success rounded-full relative"> 
+                    <svg class="w-[4rem] h-[4rem] 2lg:w-[3.5rem] 2lg:h-[3.5rem] sm:w-[3rem] sm:h-[3rem] p-[12px] stroke-white bg-success rounded-full relative hover:cursor-pointer"> 
                       <use href="../../assets/svg/sprite.svg#Calling"> </use>
                     </svg>
                   </label>
                 </li>
                 <li class="cursor-pointer"> 
                   <label for="voice-call-modal">
-                    <svg class="w-[4rem] h-[4rem] 2lg:w-[3.5rem] 2lg:h-[3.5rem] sm:w-[3rem] sm:h-[3rem] p-[12px] stroke-white bg-danger rounded-full rotate-[132deg]"> 
+                    <svg class="w-[4rem] h-[4rem] 2lg:w-[3.5rem] 2lg:h-[3.5rem] sm:w-[3rem] sm:h-[3rem] p-[12px] stroke-white bg-danger rounded-full rotate-[132deg] hover:cursor-pointer"> 
                       <use href="../../assets/svg/sprite.svg#Call"> </use>
                     </svg>
                   </label>
