--- a/html/template/switch.html
+++ b/html/template/switch.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="../../assets/css/vendors/custom-select.css">
     <!-- prism css-->
     <link rel="stylesheet" href="../../assets/css/vendors/prism.css">
+    <!-- custom-switch-->
+    <link rel="stylesheet" href="../../assets/css/vendors/custom-switch.css">
     <!-- App css-->
     <link rel="stylesheet" href="../../assets/css/style.css">
   </head>
@@ -44,8 +46,8 @@
                 <div class="search-box-wrapper transition-all duration-300 max-w-[40%] 2xl:scale-0 2xl:opacity-0 2xl:invisible 2xl:px-body-space 2xl:max-w-full w-full 2xl:z-[5] flex-1 2xl:absolute 2xl:left-0">
                   <!-- Search Start  -->
                   <div class="search-box relative">
-                    <input class="bg-gray-light dark:bg-sidebar-dark2 rounded-5 w-full py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
-                    <svg class="xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white"> 
+                    <input class="bg-gray-light dark:bg-sidebar-dark2 rounded-5 w-full  py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
+                    <svg class="xl:hidden hover:cursor-pointer w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white"> 
                       <use href="../../assets/svg/sprite.svg#Search"> </use>
                     </svg><i class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute" data-feather="x"></i>
                   </div>
@@ -76,7 +78,7 @@
                           </div>
                           <div class="search-box relative mt-4"> 
                             <input class="bg-gray-light border dark:bg-sidebar-dark2  dark:border-border-dark border-border-light  w-full py-[8px] pl-[15px] pr-[30px] rounded-5 text-xs font-medium text-title" placeholder="Type to Search..." type="search">
-                            <svg class="w-4 h-4 stroke-title top-1/2 -translate-y-1/2 right-[15px] absolute"> 
+                            <svg class="w-4 h-4 stroke-title top-1/2 -translate-y-1/2 right-[15px] absolute hover:cursor-pointer"> 
                               <use href="../../assets/svg/sprite.svg#Search"> </use>
                             </svg>
                           </div>
@@ -770,7 +772,7 @@
             <div class="search-wrapper">
               <div class="search-box"> 
                 <input class="search" placeholder="Search" type="search">
-                <svg class="w-5 h-5"> 
+                <svg class="w-5 h-5 hover:cursor-pointer"> 
                   <use href="../../assets/svg/sprite.svg#Search"> </use>
                 </svg>
               </div>
@@ -1144,11 +1146,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-6 md:col-span-12">
+            <div class="col-span-12">
               <div class="card tabs">
                 <div class="card-header pb-2 header-bottom-border">
                   <div class="flex flex-col">
-                    <h3 class="text-lg font-bold">Custom Switch</h3>
+                    <h3 class="text-lg font-bold">Variation of Switches</h3>
                     <p>Here, the Square switch that you can use. </p>
                     <div class="preview-code tab-links">
                       <button class="p-0 tab tab-lifted tab-active tab-link" data-tabFilter="1">Preview  </button>
@@ -1156,24 +1158,45 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body">                  
+                <div class="card-body">
                   <div class="tabs-content">
                     <div class="tab-pan active show " data-tabContent="1">
-                      <div class="flex justify-between items-center gap-5">
-                        <div class="flex justify-between items-center gap-3"><span class="text-xs font-medium text-content">Square Switch</span>
+                      <div class="2lg:flex-wrap flex justify-between items-center gap-5">
+                        <div class="flex justify-between items-center gap-3"> <span class="text-xs font-medium text-content">Square Switch</span>
                           <label class="inline-flex relative items-center cursor-pointer">
                             <input class="sr-only peer" type="checkbox" checked=""><span class="w-11 h-6 bg-content rounded-5 peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-5 after:h-5 after:w-5 after:transition-all peer-checked:bg-warning"></span>
                           </label>
+                        </div>
+                        <div class="flex justify-between items-center gap-3"><span class="text-xs font-medium text-content">Icon Switch</span>
+                          <div class="switch_boxbox_4">
+                            <div class="input_wrapper">
+                              <input class="switch_4" type="checkbox" checked="">
+                              <div class="is_checked"> <i class="w-4 h-4 !stroke-contact" data-feather="check"> </i></div>
+                              <div class="is_unchecked"> <i class="w-4 h-4 !stroke-contact" data-feather="x"></i></div>
+                            </div>
+                          </div>
                         </div>
                         <div class="flex justify-between items-center gap-3"><span class="text-xs font-medium text-content">Flat Switch</span>
                           <label class="inline-flex relative items-center cursor-pointer">
                             <input class="sr-only peer" type="checkbox" checked=""><span class="w-11 h-6 bg-content rounded-none peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-none after:h-5 after:w-5 after:transition-all peer-checked:bg-info"></span>
                           </label>
                         </div>
+                        <div class="flex justify-between items-center gap-3"><span class="text-xs font-medium text-content">Skewed</span>
+                          <div class="tg-list-item"> 
+                            <input class="tgl tgl-skewed" id="cb3" type="checkbox">
+                            <label class="tgl-btn" data-tg-off="OFF" data-tg-on="ON" for="cb3"></label>
+                          </div>
+                        </div>
+                        <div class="flex justify-between items-center gap-3"><span class="text-xs font-medium text-content">Flip  </span>
+                          <div class="tg-list-item"> 
+                            <input class="tgl tgl-flip" id="cb5" type="checkbox">
+                            <label class="tgl-btn" data-tg-off="Nope" data-tg-on="Yeah!" for="cb5"></label>
+                          </div>
+                        </div>
                       </div>
                     </div>
-                    <div class="relative tab-pan copyParent group " data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                    <div class="relative tab-pan copyParent group" data-tabContent="2">
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"> </i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex items-center justify-between gap-5"&gt;
   &lt;div class="flex items-center justify-between"&gt; 
       &lt;span class="gap-3 text-xs font-medium text-content"&gt;Square Switch&lt;/span&gt;
@@ -1193,45 +1216,6 @@
               after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-none after:h-5 after:w-5 after:transition-all peer-checked:bg-info"&gt;&lt;/span&gt;
       &lt;/label&gt;
   &lt;/div&gt; 
-&lt;/div&gt;</code></pre>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-span-6 md:col-span-12">
-              <div class="card tabs">
-                <div class="card-header pb-2 header-bottom-border">
-                  <div class="flex flex-col">
-                    <h3 class="text-lg font-bold">Variation of Switches</h3>
-                    <p>Here, the Square switch that you can use. </p>
-                    <div class="preview-code tab-links">
-                      <button class="p-0 tab tab-lifted tab-active tab-link" data-tabFilter="1">Preview  </button>
-                      <button class="p-0 tab tab-lifted tab-link tab-2" data-tabFilter="2">Html</button>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-body">                  
-                  <div class="tabs-content">
-                    <div class="tab-pan active show " data-tabContent="1">
-                      <div class="flex justify-between items-center gap-5">
-                        <div class="flex justify-between items-center gap-3"><span class="text-xs font-medium text-content">Skewed</span>
-                          <div class="tg-list-item">
-                            <input class="tgl tgl-skewed" id="cb3" type="checkbox">
-                            <label class="tgl-btn" data-tg-off="OFF" data-tg-on="ON" for="cb3"></label>
-                          </div>
-                        </div>
-                        <div class="flex justify-between items-center gap-3"><span class="text-xs font-medium text-content">Flip</span>
-                          <div class="tg-list-item">
-                            <input class="tgl tgl-flip" id="cb5" type="checkbox">
-                            <label class="tgl-btn" data-tg-off="Nope" data-tg-on="Yeah!" for="cb5">  </label>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="relative tab-pan copyParent group " data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex items-center justify-between gap-5"&gt;
   &lt;div class="flex items-center justify-between"&gt; 
       &lt;span class="text-xs font-medium text-content"&gt;Skewed&lt;/span&gt;
       &lt;div class="tg-list-item"&gt;
@@ -1239,6 +1223,17 @@
           &lt;label class="tgl-btn" data-tg-off = "OFF" data-tg-on = "ON"  for = "cb3"&gt;
           &lt;/label&gt;
       &lt;/div&gt;
+  &lt;/div&gt;  
+  &lt;div&gt;
+    &lt;div class="switch_boxbox_4"&gt;&lt;/div&gt;
+      &lt;div class=".input_wrapper"&gt;&lt;/div&gt;
+        &lt;input type='checkbox' class="switch_4&gt;&lt;/input&gt;
+        &lt;div class="is_checked&gt;
+            &lt;i class="w-4 h-4 stroke-contact" data-feather="check"&gt; &lt;/i&gt;
+        &lt;/div&gt;
+        &lt;div class="is_unchecked"&gt;
+            &lt;i class="w-4 h-4 stroke-contact" data-feather="x" &gt; &lt;/i&gt;
+        &lt;/div&gt;
   &lt;/div&gt; 
   &lt;div class="flex items-center justify-between"&gt; 
       &lt;span class="text-xs font-medium text-content"&gt;Flip&lt;/span&gt;
